--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aos": "^2.3.4",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^12.25.0",
     "lucide-react": "^0.554.0",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
